--- a/404.html
+++ b/404.html
@@ -1,10 +1,12 @@
 ---
-layout: layout
-title: Page not found!
+layout: default
+title: "404 Page Not Found"
+permalink: 404.html
 ---
 
-<div class="container">
-  <div class="page-not-found">
-    <h3>Uh oh! Page not found!</h3>
-  </div>
+<div class="page-content wc-container">
+  <h3>404 Page Not Found</h3>
+  <h4>The page you were looking for is not found.</h4>
+  <p>Sorry, we've misplaced that URL or it's pointing to something that 
+  	doesn't exist. Please <a href="{{ site.baseurl }}">head back home</a> to try finding it again.</p>
 </div>
